Desktop tests & refactor, ContactBookService refactor
